# var-dashboarding-mvp

./: pnpm-lock.yaml  sample_pnl_vectors.csv
app/: main.py  pyproject.toml
app/minrei_lib/: README.md  __init__.py  base.py  commodities.py  core.py  database.py  facade.py  house.py  plot.py  portfolio_analysis.py  prices.py  traders.py
app/minrei_lib/sql/: get-commodity-index.sql  get-house-historical-pl.sql  get-house-positions-latest.sql  get-prices-full.sql  get-prices-latest-lookback.sql  get-prices-start-lookback.sql  get-seasonal-index.sql  get-trader-historical-pl.sql  get-trader-positions-latest.sql  get-trader-positions-with-prices.sql  get-trader-positions.sql  get-traders-pnl.sql  list-traders.sql
app/routers/: utils.py  var.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  page.tsx
frontend/components/: GridToolbar.tsx  MainGrid.tsx  TestGrid.tsx  TraderSelection.tsx
frontend/hooks/: useTraderPnlVectors.tsx
frontend/lib/: format.ts  gridDefs.ts  utils.ts
